# simple-API

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
src/: util.py
