[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["hsuan744172 <hsuan069317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
cachetools = "^5.3.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
